--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ body, html {
         padding: 10px;
         border-radius: 5px;
         width: auto;
+        gap:10px;
     }
     
     .nav-menu.active {
@@ -170,6 +171,7 @@ body, html {
         padding: 10px;
         border-radius: 5px;
         width: auto;
+        gap:10px;
     }
     
     .nav-menu.active {
@@ -203,6 +205,7 @@ body, html {
         padding: 10px;
         border-radius: 5px;
         width: auto;
+        gap:10px;
     }
     
     .nav-menu.active {
